# flowreplay

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SPEC.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: WHITEPAPER.md
examples/: example.SKILL.md
flowreplay/: __init__.py  cli.py  player.py  quality.py  recorder.py  skillmd.py
tests/: test_extract.py  test_replay.py  test_roundtrip.py
tests/fixtures/: demo.html
