[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowreplay"
version = "0.2.0"
description = "Record a browser flow once; keep it as a portable, self-healing SKILL.md that agents can replay deterministically."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "boksclaw" }]
keywords = [
    "browser-automation",
    "rpa",
    "playwright",
    "agent-skills",
    "web-flow",
    "record-replay",
    "self-healing-locators",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
# Recording (and, from M1, replay) drives a real browser via Playwright.
record = ["playwright>=1.44.0"]
dev = ["pytest>=8.0", "playwright>=1.44.0"]

[project.scripts]
flowreplay = "flowreplay.cli:main"

[project.urls]
Homepage = "https://github.com/kuilenren/flowreplay"
Specification = "https://github.com/kuilenren/flowreplay/blob/main/SPEC.md"
Issues = "https://github.com/kuilenren/flowreplay/issues"

[tool.hatch.build.targets.wheel]
packages = ["flowreplay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
